--- a/index.html
+++ b/index.html
@@ -1,83 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Angel's Quest — Traveler</title>
-<style>
-  :root{
-    --bg1:#ffecd2; --bg2:#ffa8a5; --accent:#F2AE2E; --ink:#2b1f1f;
-  }
-  *{box-sizing:border-box;margin:0;padding:0}
-  html,body{height:100%;font-family:Inter,system-ui,Arial;background:#0a0a1a;color:var(--ink);}
-
-  /* layout */
-  #game-wrapper{display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px}
-  #game-container{width:900px;height:650px;border-radius:18px;overflow:hidden;position:relative;
-    background:linear-gradient(180deg,var(--bg1) 0%, #F8F2E8 70%, var(--bg2) 100%);box-shadow:0 20px 60px rgba(0,0,0,0.6);
-  }
-
-  /* starfield */
-  .star{position:absolute;background:#fff;border-radius:50%;opacity:0.85;animation:twinkle 3s ease-in-out infinite}
-  @keyframes twinkle{0%,100%{opacity:.3;transform:scale(1)}50%{opacity:1;transform:scale(1.2)}}
-
-  /* overlay screens */
-  .overlay-screen{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;z-index:1100}
-  #title-screen{background:linear-gradient(135deg, rgba(102,126,234,0.96), rgba(118,75,162,0.96));backdrop-filter:blur(6px);flex-direction:column;padding:40px;text-align:center}
-  #title-screen h1{font-family:Georgia,serif;color:#fff;font-size:40px;margin-bottom:12px;text-shadow:0 0 20px rgba(255,215,0,.6)}
-  #title-screen p{color:#f5f5f5;max-width:700px;margin-bottom:22px;line-height:1.6}
-  .btn{appearance:none;border:0;padding:12px 28px;border-radius:999px;background:linear-gradient(135deg,var(--accent),#BF2A52);color:#fff;font-weight:700;cursor:pointer}
-
-  #story-screen,#win-screen{display:none;flex-direction:column;padding:36px;text-align:center;color:#fff}
-  #story-screen h2,#win-screen h2{color:#fff;font-family:Georgia,serif;margin-bottom:8px}
-  #win-screen .stats{background:rgba(255,255,255,0.08);padding:16px;border-radius:12px;color:#fff;margin-top:12px}
-
-  /* HUD */
-  #hud{position:absolute;top:14px;left:14px;right:14px;display:flex;justify-content:space-between;z-index:1000;pointer-events:none}
-  .hud-item{background:rgba(255,255,255,0.92);padding:10px 14px;border-radius:12px;font-weight:700;color:#333;pointer-events:auto}
-
-  /* player - sprite image */
-  #player{position:absolute;width:86px;height:86px;left:425px;top:520px;z-index:500;transform-origin:center center;pointer-events:none}
-  #player img{width:100%;height:100%;object-fit:contain;display:block;transition:transform .12s ease,filter .12s ease}
-  /* idle float */
-  .idle { animation:float 2000ms ease-in-out infinite; }
-  @keyframes float{0%{transform:translateY(0)}50%{transform:translateY(-6px)}100%{transform:translateY(0)}}
-  /* walking tilt classes applied to img */
-  .walk-left { transform: rotate(-10deg) translateY(0); }
-  .walk-right { transform: rotate(10deg) translateY(0); }
-  .walk-up { transform: translateY(-4px) scale(1.04); }
-  .walk-down { transform: translateY(4px) scale(0.98); }
-
-  /* tiles */
-  .tile{position:absolute;width:46px;height:46px;border-radius:12px;box-shadow:0 8px 22px rgba(0,0,0,0.15);display:flex;align-items:center;justify-content:center;cursor:pointer;z-index:300;transition:transform .18s ease,opacity .25s ease}
-  .tile.gold{background:linear-gradient(135deg,#ffd89b,#ffb26b)}
-  .tile.crystal{background:linear-gradient(135deg,#bfe9ff,#f8d6ff)}
-  .tile.star{background:linear-gradient(135deg,#c3d8ff,#e7d6ff)}
-  .tile.collected{transform:scale(0);opacity:0}
-
-  /* enemy orb (chaser) */
-  .orb{position:absolute;width:36px;height:36px;border-radius:50%;background:radial-gradient(circle at 40% 30%, #222 0%, #000 80%);box-shadow:0 8px 30px rgba(0,0,0,0.6);z-index:260}
-
-  /* obstacles */
-  .obstacle{position:absolute;background:linear-gradient(180deg,#333,#111);border-radius:10px;z-index:250;box-shadow:0 8px 20px rgba(0,0,0,0.4)}
-
-  /* particle */
-  .particle{position:absolute;width:10px;height:10px;border-radius:50%;background:gold;pointer-events:none;z-index:400;animation:particleFade 900ms ease-out forwards}
-  @keyframes particleFade{0%{opacity:1;transform:translate(0,0) scale(1)}100%{opacity:0;transform:translate(var(--tx),var(--ty)) scale(0)}}
-
-  /* controls / mobile */
-  #controls{position:absolute;bottom:12px;left:50%;transform:translateX(-50%);background:rgba(255,255,255,0.9);padding:10px 14px;border-radius:12px;z-index:900}
-  #mobile-controls{position:absolute;bottom:80px;left:50%;transform:translateX(-50%);display:none;gap:10px;z-index:900}
-  .control-row{display:flex;gap:10px;justify-content:center}
-  .control-btn{width:60px;height:60px;border-radius:50%;background:rgba(255,255,255,0.95);display:flex;align-items:center;justify-content:center;font-weight:700;user-select:none}
-
-  /* responsive */
-  @media(max-width:780px){
-    #game-container{width:100vw;height:100vh;border-radius:0}
-    #mobile-controls{display:block}
-    #controls{display:none}
-  }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Angel's Quest — Traveler</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="game-wrapper">
@@ -86,19 +13,10 @@
 
       <!-- Title -->
       <div id="title-screen" class="overlay-screen">
-        <div style="max-width:820px">
+        <div>
           <h1>Angel's Quest</h1>
-          <p>Welcome, traveler. A gentle quest awaits: collect the sacred tiles across three realms. Move with WASD / arrows or the on-screen buttons on mobile.</p>
-          <div style="margin-top:18px"><button id="start-btn" class="btn">Begin Your Journey</button></div>
-        </div>
-      </div>
-
-      <!-- Story -->
-      <div id="story-screen" class="overlay-screen">
-        <div style="max-width:760px;background:rgba(255,255,255,0.03);padding:28px;border-radius:12px">
-          <h2 id="story-title">Chapter</h2>
-          <p id="story-text" style="color:#fff;line-height:1.6"></p>
-          <div style="margin-top:18px;text-align:right"><button id="continue-btn" class="btn">Continue</button></div>
+          <p>Welcome, traveler. A gentle quest awaits: collect the sacred tiles. Move with WASD / arrow keys.</p>
+          <button id="start-btn" class="btn">Begin Your Journey</button>
         </div>
       </div>
 
@@ -108,249 +26,13 @@
         <div class="hud-item" id="level">Level: 1</div>
       </div>
 
-      <!-- Player (sprite image) -->
-      <div id="player" aria-hidden="false">
-        <img id="player-img" class="idle" src="C:\Users\Admin\Downloads\Cheerful Angel with Backpack.png" alt="traveler sprite">
-      </div>
+      <!-- Player (CSS character) -->
+      <div id="player" aria-hidden="false"></div>
 
-      <!-- Desktop Controls hint -->
+      <!-- Controls hint -->
       <div id="controls">Use WASD / Arrow keys to move — Collect all tiles</div>
-
-      <!-- Mobile Controls -->
-      <div id="mobile-controls">
-        <div class="control-row"><div class="control-btn" data-key="w">↑</div></div>
-        <div class="control-row">
-          <div class="control-btn" data-key="a">←</div>
-          <div class="control-btn" data-key="s">↓</div>
-          <div class="control-btn" data-key="d">→</div>
-        </div>
-      </div>
-
-      <!-- Win -->
-      <div id="win-screen" class="overlay-screen" style="display:none">
-        <div style="max-width:760px;text-align:center">
-          <h2>Well done, Traveler!</h2>
-          <p>You completed your journey.</p>
-          <div class="stats" id="final-score">Total Tiles: 0</div>
-          <div style="margin-top:12px"><button id="replay-btn" class="btn">Play Again</button></div>
-        </div>
-      </div>
-
     </div>
   </div>
-
-<script>
-/* ======== Levels (no emojis) ======== */
-const LEVELS = [
-  { name:"Meadow of Beginnings", story:"The Meadow of Beginnings awaits. Gather the golden tiles that hold ancient wisdom...", tiles:[{x:150,y:150,type:'gold'},{x:700,y:150,type:'gold'},{x:425,y:300,type:'gold'},{x:200,y:480,type:'gold'},{x:650,y:480,type:'gold'},{x:350,y:500,type:'gold'},{x:500,y:500,type:'gold'}], obstacles:[] },
-  { name:"Crystal Caverns", story:"Deep within the Crystal Caverns, mystical gems await your discovery. Navigate carefully...", tiles:[{x:120,y:120,type:'crystal'},{x:730,y:120,type:'crystal'},{x:425,y:200,type:'crystal'},{x:250,y:400,type:'crystal'},{x:600,y:400,type:'crystal'},{x:425,y:520,type:'crystal'},{x:150,y:300,type:'crystal'}], obstacles:[{x:350,y:300,w:150,h:50},{x:200,y:200,w:50,h:100},{x:600,y:250,w:50,h:150}] },
-  { name:"Starlight Sanctuary", story:"You've reached the final realm — the Starlight Sanctuary. Collect the celestial stars to complete your quest!", tiles:[{x:100,y:100,type:'star'},{x:750,y:100,type:'star'},{x:425,y:150,type:'star'},{x:200,y:450,type:'star'},{x:650,y:450,type:'star'},{x:300,y:300,type:'star'},{x:550,y:300,type:'star'}], obstacles:[{x:200,y:250,w:100,h:30},{x:550,y:250,w:100,h:30},{x:375,y:400,w:100,h:30}] }
-];
-
-/* ======== State ======== */
-const gameState = { playerX:425, playerY:520, playerSpeed:3.2, score:0, totalScore:0, currentLevel:0, tiles:[], obstacles:[], orbs:[], gameStarted:false, isWalking:false };
-
-/* ======== DOM ======== */
-const playerEl = document.getElementById('player');
-const playerImg = document.getElementById('player-img');
-const scoreEl = document.getElementById('score');
-const levelEl = document.getElementById('level');
-const titleScreen = document.getElementById('title-screen');
-const storyScreen = document.getElementById('story-screen');
-const winScreen = document.getElementById('win-screen');
-const gameContainer = document.getElementById('game-container');
-const starfield = document.getElementById('starfield');
-
-/* ======== Helpers ======== */
-function rand(min,max){ return Math.random()*(max-min)+min }
-function svgFor(type){
-  if(type==='gold') return `<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="#ffd86d" d="M12 2l2.4 5.5L20 10l-5 3.6L16 20 12 16.8 8 20l1-6.4L4 10l5.6-2.5L12 2z"/></svg>`;
-  if(type==='crystal') return `<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="#a8edea" d="M12 2l4 6 6 2-6 4-4 6-4-6L2 10l6-2 4-6z"/></svg>`;
-  return `<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="#ffe9a8" d="M12 .9l3.1 6.3L22 8.2l-5 4.8L18.2 22 12 18.6 5.8 22 7 13 2 8.2l6.9-1L12 .9z"/></svg>`;
-}
-function createStarfield(){ for(let i=0;i<30;i++){ const s=document.createElement('div'); s.className='star'; const size=Math.random()*3+1; s.style.width=s.style.height=size+'px'; s.style.left=Math.random()*100+'%'; s.style.top=Math.random()*100+'%'; s.style.animationDelay=Math.random()*3+'s'; starfield.appendChild(s);} }
-createStarfield();
-
-/* ======== UI Flow ======== */
-document.getElementById('start-btn').addEventListener('click', ()=>{ titleScreen.style.display='none'; showStory(); });
-document.getElementById('continue-btn').addEventListener('click', ()=>{ storyScreen.style.display='none'; if(!gameState.gameStarted){ gameState.gameStarted=true; loadLevel(0); requestAnimationFrame(gameLoop);} else loadLevel(gameState.currentLevel); });
-document.getElementById('replay-btn').addEventListener('click', ()=>{ location.reload(); });
-
-function showStory(){
-  const lvl = LEVELS[gameState.currentLevel];
-  document.getElementById('story-title').textContent = `Chapter ${gameState.currentLevel+1}: ${lvl.name}`;
-  document.getElementById('story-text').textContent = lvl.story;
-  storyScreen.style.display = 'flex';
-}
-
-/* ======== Spawn level (tiles, obstacles, and orbs) ======== */
-function loadLevel(index){
-  gameState.currentLevel = index;
-  gameState.score = 0; gameState.tiles = []; gameState.obstacles = []; gameState.orbs = [];
-  document.querySelectorAll('.tile, .obstacle, .orb').forEach(el=>el.remove());
-  const lvl = LEVELS[index];
-  levelEl.textContent = `Level: ${index+1}`;
-  scoreEl.textContent = `Tiles: 0 / ${lvl.tiles.length}`;
-  gameState.playerX = 425; gameState.playerY = 520; playerEl.style.left = gameState.playerX+'px'; playerEl.style.top = gameState.playerY+'px';
-
-  // tiles
-  lvl.tiles.forEach((t,i)=>{
-    const el=document.createElement('div'); el.className='tile '+t.type; el.innerHTML=svgFor(t.type);
-    el.style.left=t.x+'px'; el.style.top=t.y+'px'; el.dataset.index=i; gameContainer.appendChild(el);
-    gameState.tiles.push({element:el,x:t.x,y:t.y,collected:false});
-  });
-
-  // obstacles
-  (lvl.obstacles||[]).forEach(o=>{
-    const ob=document.createElement('div'); ob.className='obstacle'; ob.style.left=o.x+'px'; ob.style.top=o.y+'px'; ob.style.width=o.w+'px'; ob.style.height=o.h+'px';
-    gameContainer.appendChild(ob); gameState.obstacles.push({x:o.x,y:o.y,w:o.w,h:o.h});
-  });
-
-  // spawn an orb chaser or two per level (increase with level)
-  const orbCount = Math.min(1 + index, 3);
-  for(let i=0;i<orbCount;i++){
-    spawnOrb();
-  }
-}
-
-/* orb spawner */
-function spawnOrb(){
-  const el=document.createElement('div'); el.className='orb';
-  // spawn at random edge
-  const side = Math.floor(Math.random()*4);
-  let x,y;
-  if(side===0){ x=-40; y=rand(20,600); }
-  else if(side===1){ x=940; y=rand(20,600); }
-  else if(side===2){ x=rand(20,880); y=-40; }
-  else { x=rand(20,880); y=700; }
-  el.style.left = x+'px'; el.style.top = y+'px'; gameContainer.appendChild(el);
-  const speed = 0.7 + Math.random()*0.9 + (gameState.currentLevel*0.15); // slightly faster each level
-  gameState.orbs.push({el,x,y,speed});
-}
-
-/* ======== Input handlers ======== */
-const keys={};
-window.addEventListener('keydown', e=>{ keys[e.key.toLowerCase()] = true; if(['arrowup','arrowdown','arrowleft','arrowright'].includes(e.key.toLowerCase())) e.preventDefault();});
-window.addEventListener('keyup', e=>{ keys[e.key.toLowerCase()] = false; });
-
-document.querySelectorAll('.control-btn').forEach(btn=>{
-  btn.addEventListener('touchstart', e=>{ e.preventDefault(); keys[btn.dataset.key]=true;});
-  btn.addEventListener('touchend', e=>{ e.preventDefault(); keys[btn.dataset.key]=false;});
-  btn.addEventListener('mousedown', e=>{ keys[btn.dataset.key]=true;});
-  btn.addEventListener('mouseup', e=>{ keys[btn.dataset.key]=false;});
-});
-
-/* collisions */
-function rectsOverlap(ax,ay,aw,ah,bx,by,bw,bh){ return !(ax+aw < bx || ax > bx+bw || ay+ah < by || ay > by+bh); }
-function createParticles(cx,cy){ for(let i=0;i<8;i++){ const p=document.createElement('div'); p.className='particle'; p.style.left=cx+'px'; p.style.top=cy+'px'; const angle=(Math.PI*2*i)/8; const dist=20+Math.random()*30; p.style.setProperty('--tx',Math.cos(angle)*dist+'px'); p.style.setProperty('--ty',Math.sin(angle)*dist+'px'); gameContainer.appendChild(p); setTimeout(()=>p.remove(),900);} }
-
-/* ======== Game loop ======== */
-let lastTime=0;
-function gameLoop(ts){
-  if(!gameState.gameStarted) return;
-  if(!lastTime) lastTime=ts;
-  const dt = ts - lastTime; lastTime = ts;
-
-  // proposed movement
-  let nx = gameState.playerX, ny = gameState.playerY, moving=false;
-  if(keys['w']||keys['arrowup']){ ny = Math.max(4, gameState.playerY - gameState.playerSpeed); moving=true; playerImg.classList.add('walk-up'); }
-  if(keys['s']||keys['arrowdown']){ ny = Math.min(gameContainer.clientHeight-100, gameState.playerY + gameState.playerSpeed); moving=true; playerImg.classList.add('walk-down'); }
-  if(keys['a']||keys['arrowleft']){ nx = Math.max(4, gameState.playerX - gameState.playerSpeed); moving=true; playerImg.classList.add('walk-left'); }
-  if(keys['d']||keys['arrowright']){ nx = Math.min(gameContainer.clientWidth-90, gameState.playerX + gameState.playerSpeed); moving=true; playerImg.classList.add('walk-right'); }
-
-  if(!moving){ playerImg.classList.remove('walk-left','walk-right','walk-up','walk-down'); if(!playerImg.classList.contains('idle')) playerImg.classList.add('idle'); } else playerImg.classList.remove('idle');
-
-  // obstacle collision
-  let collided = false;
-  for(const obs of gameState.obstacles){ if(rectsOverlap(nx,ny,60,70,obs.x,obs.y,obs.w,obs.h)){ collided=true; break; } }
-  if(!collided){ gameState.playerX = nx; gameState.playerY = ny; playerEl.style.left = gameState.playerX+'px'; playerEl.style.top = gameState.playerY+'px'; }
-
-  // orbs move towards player
-  for(const orb of gameState.orbs){
-    const dx = (gameState.playerX - orb.x);
-    const dy = (gameState.playerY - orb.y);
-    const dist = Math.hypot(dx,dy) || 1;
-    orb.x += (dx/dist) * orb.speed;
-    orb.y += (dy/dist) * orb.speed;
-    orb.el.style.left = orb.x+'px'; orb.el.style.top = orb.y+'px';
-    // check collision with player -> reset level
-    if(rectsOverlap(gameState.playerX,gameState.playerY,60,70,orb.x,orb.y,36,36)){
-      // reset this level: respawn tiles, set score to 0, brief flash
-      resetLevelOnHit();
-      return; // pause this frame, level will be reloaded and loop continues after continue
-    }
-  }
-
-  // tile collision
-  for(const t of gameState.tiles){
-    if(!t.collected){
-      const dx = (gameState.playerX+30) - (t.x+23);
-      const dy = (gameState.playerY+35) - (t.y+23);
-      const d = Math.hypot(dx,dy);
-      if(d < 48){
-        t.collected = true;
-        createParticles(t.x+23,t.y+23);
-        t.element.classList.add('collected');
-        setTimeout(()=>t.element.remove(),320);
-        gameState.score++; gameState.totalScore++;
-        scoreEl.textContent = `Tiles: ${gameState.score} / ${LEVELS[gameState.currentLevel].tiles.length}`;
-        if(gameState.score === LEVELS[gameState.currentLevel].tiles.length){
-          // level complete
-          if(gameState.currentLevel < LEVELS.length - 1){
-            gameState.gameStarted = false;
-            setTimeout(()=>{ gameState.currentLevel++; showStory(); }, 700);
-            return;
-          } else {
-            gameState.gameStarted = false;
-            setTimeout(()=>{ winGame(); }, 700);
-            return;
-          }
-        }
-      }
-    }
-  }
-
-  requestAnimationFrame(gameLoop);
-}
-
-/* ======== Reset on orb hit ======== */
-function resetLevelOnHit(){
-  // flash effect (simple)
-  gameContainer.style.transition = 'filter 0.15s';
-  gameContainer.style.filter = 'grayscale(0.9) brightness(0.6)';
-  setTimeout(()=>{ gameContainer.style.filter = ''; }, 220);
-  // reset score, respawn current level
-  setTimeout(()=>{
-    loadLevel(gameState.currentLevel);
-    // small penalty: reduce totalScore a bit (optional)
-  }, 300);
-}
-
-/* ======== load/start/win ======== */
-function loadInitial(){ playerEl.style.left = gameState.playerX+'px'; playerEl.style.top = gameState.playerY+'px'; }
-loadInitial();
-
-document.getElementById('continue-btn').addEventListener('click', ()=>{
-  if(!gameState.gameStarted){
-    gameState.gameStarted = true;
-    loadLevel(0);
-    requestAnimationFrame(gameLoop);
-  }
-});
-
-function winGame(){
-  document.getElementById('final-score').textContent = `Total Tiles: ${gameState.totalScore}`;
-  winScreen.style.display = 'flex';
-}
-
-/* ======== spawn helpers ======== */
-function spawnOrbAt(x,y){ const el=document.createElement('div'); el.className='orb'; el.style.left=x+'px'; el.style.top=y+'px'; gameContainer.appendChild(el); gameState.orbs.push({el,x,y,speed:1.1}); }
-
-/* ======== grip - small convenience: load next level when story continues ======== */
-document.getElementById('continue-btn').addEventListener('click', ()=>{ if(!gameState.gameStarted){ gameState.gameStarted=true; loadLevel(gameState.currentLevel); requestAnimationFrame(gameLoop);} });
-
-window.addEventListener('resize', ()=>{ /* nothing heavy */ });
-
-</script>
+  <script src="script.js"></script>
 </body>
 </html>
