--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div id="title-screen" class="overlay-screen">
         <div>
           <h1>Angel's Quest</h1>
-          <p>Welcome, traveler. A gentle quest awaits: collect the sacred tiles. Move with WASD / arrow keys.</p>
+          <p>Welcome, traveler. A gentle quest awaits: collect the sacred tiles.<br>
+             Move with <span class="kbd">WASD</span> / <span class="kbd">Arrows</span> or on-screen buttons (mobile).</p>
           <button id="start-btn" class="btn">Begin Your Journey</button>
         </div>
       </div>
@@ -29,8 +30,20 @@
       <!-- Player (CSS character) -->
       <div id="player" aria-hidden="false"></div>
 
+      <!-- Enemy -->
+      <div id="enemy"></div>
+
       <!-- Controls hint -->
       <div id="controls">Use WASD / Arrow keys to move — Collect all tiles</div>
+      <div id="mobile-controls">
+        <div class="control-row"><div class="control-btn" data-key="w">↑</div></div>
+        <div class="control-row">
+          <div class="control-btn" data-key="a">←</div>
+          <div class="control-btn" data-key="s">↓</div>
+          <div class="control-btn" data-key="d">→</div>
+        </div>
+      </div>
+
     </div>
   </div>
   <script src="script.js"></script>
