--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Angel's Quest — Traveler</title>
+  <title>Angel's Quest — Traveler (2D CSS sprites)</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="game-wrapper">
     <div id="game-container">
+      <div id="parallax">
+        <div class="layer back"></div>
+        <div class="layer mid"></div>
+        <div class="layer front"></div>
+      </div>
+
       <div id="starfield"></div>
 
-      <!-- Title -->
+      <!-- Title Screen -->
       <div id="title-screen" class="overlay-screen">
-        <div>
+        <div class="card">
           <h1>Angel's Quest</h1>
-          <p>Welcome, traveler. A gentle quest awaits: collect the sacred tiles.<br>
-             Move with <span class="kbd">WASD</span> / <span class="kbd">Arrows</span> or use on-screen buttons (mobile).</p>
-          <button id="start-btn" class="btn">Begin Your Journey</button>
+          <p>Welcome, Traveler. Collect the sacred tiles across three realms. Controls: WASD / Arrows or on-screen buttons (mobile).</p>
+          <div class="actions">
+            <button id="start-btn" class="btn">Begin Your Journey</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- Story -->
+      <div id="story-screen" class="overlay-screen hidden">
+        <div class="card">
+          <h2 id="story-title">Chapter</h2>
+          <p id="story-text"></p>
+          <div class="actions" style="justify-content:flex-end">
+            <button id="continue-btn" class="btn">Continue</button>
+          </div>
         </div>
       </div>
 
@@ -27,25 +45,48 @@
         <div class="hud-item" id="level">Level: 1</div>
       </div>
 
-      <!-- Player (CSS character) -->
-      <div id="player" aria-hidden="false"></div>
+      <!-- Player (CSS sprite) -->
+      <div id="player" aria-hidden="false" class="idle" title="Traveler">
+        <!-- layered parts -->
+        <div class="backpack"></div>
+        <div class="body"></div>
+        <div class="head"></div>
+        <div class="wing wing-left"></div>
+        <div class="wing wing-right"></div>
+      </div>
 
-      <!-- Enemy -->
-      <div id="enemy"></div>
+      <!-- Enemy container (CSS orb) -->
+      <div id="orbs"></div>
 
-      <!-- Controls hint (desktop) -->
-      <div id="controls">Use WASD / Arrow keys to move — Collect all tiles</div>
-      <!-- On-screen controls (mobile) -->
-      <div id="mobile-controls">
+      <!-- Tiles container -->
+      <div id="tiles"></div>
+
+      <!-- Particles -->
+      <div id="particles"></div>
+
+      <!-- Mobile Controls -->
+      <div id="mobile-controls" class="hidden">
         <div class="control-row"><div class="control-btn" data-key="w">↑</div></div>
-        <div class="control-row">
-          <div class="control-btn" data-key="a">←</div>
-          <div class="control-btn" data-key="s">↓</div>
-          <div class="control-btn" data-key="d">→</div>
+        <div class="control-row"><div class="control-btn" data-key="a">←</div><div class="control-btn" data-key="s">↓</div><div class="control-btn" data-key="d">→</div></div>
+      </div>
+
+      <!-- On-screen desktop hint -->
+      <div id="controls" class="hint">Use WASD or Arrow keys to move — avoid orbs that reset progress.</div>
+
+      <!-- Win screen -->
+      <div id="win-screen" class="overlay-screen hidden">
+        <div class="card">
+          <h2>Well done, Traveler!</h2>
+          <p>You completed the quest.</p>
+          <div class="actions">
+            <button id="replay-btn" class="btn">Play Again</button>
+          </div>
         </div>
       </div>
+
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
